--- a/src/app/OrderZapp/oz/views/oz.oz_content.tpl.html
+++ b/src/app/OrderZapp/oz/views/oz.oz_content.tpl.html
@@ -1,166 +1,3 @@
-
-
-<!--   <div ng-if = "controlWallView === 0 && showSOrderView === 0 "><h4><i>Please search seller or suborder from side panel to view orders</i></h4></div>
-
-  <div >
-      <div>
-            <h4 ng-if = 'branchContent.length > 0'><i>Please select branch</i></h4>
-            <br>
-            <div class="prodo-productListCorousel"  ng-if = 'branchContent.length > 0'>
-                <button class="arrowBtn prodo-arrowbtnLeft" ng-show="branchContent.length > 3" ng-disabled="currentPage == 0" ng-click="currentPage=currentPage-1" >
-                  < 
-                </button>
-
-                <div ng-repeat="branches in branchContent  | startFrom:currentPage*pageSize | limitTo:pageSize" ui-sref = "oz.ozWall.ozOrderViewContent" ng-click= "showOrderContent(branches.branchid);"> 
-                 <div class="prodo-productThumbnailView"   ng-class="{activeProduct : branches.branchname==currentBranch.branchname}" >
-                  <a  class="prodo-cursor"  href="" >
-                    <div style = 'margin-bottom:5px;'>
-                        <p class="prodo-AddProductBtn prodo-productNameList" >{{branches.branchname.substring(0,22)}}<span ng-show="branches.branchname.length>22">...</span></p>
-                    </div>
-                    <img  ng-src="{{providerlogo}}" alt-SRC src="../assets/images/if_no_org_images_available.jpg"  class="prodo-productThumbnailImg img-rounded" style = "margin: 0px auto;display: block;width: 95%;height: 65%;margin-top: 10px;">
-                  </a>
-                </div>
-                </div>
-                   <button class="arrowBtn prodo-arrowbtnRight"  ng-show="branchContent.length > 3 " ng-disabled="currentPage >= branchContent.length/pageSize - 1" ng-click="currentPage=currentPage+1" >
-                  >
-                </button>
-              </div>
-        <div>
-              <div ng-if = "showSpinners === 1" style = "margin : 2%"> <h4>Loading</h4>&nbsp;<img src = '../assets/images/spinner.gif' style = "width: 14%;height: 20px;"></div>
-
-      <tabset>
-          <tab heading = 'Manage Orders & Products' class = 'cursorPointerHyperlink active' ng-click = "showOrderContents(); trigger()" ui-sref = "oz.ozWall.ozOrderViewContent">
-            <tabset style = 'font-size : 12px'>
-              <tab heading="Orders" class = "cursorPointerHyperlink active" ng-click = "showOrderContents()" ui-sref = "oz.ozWall.ozOrderViewContent"      active = "active.init"></tab>
-              <tab heading="Products" ui-sref = "oz.ozWall.ozProductContent" select="showProductContent()" class = "cursorPointerHyperlink"></tab>
-            </tabset>
-          </tab>
-          <tab heading = 'Manage OZ Configurations' class = 'cursorPointerHyperlink' ui-sref = "oz.ozWall.ozProviderAcceptance" style ='float:right' ng-click = 'clearContentT()'>
-             <tabset style = 'font-size : 12px'>
-              <tab heading="New Seller Acceptance" ui-sref = "oz.ozWall.ozProviderAcceptance" class = "cursorPointerHyperlink" ng-click = 'getAllProviders()'></tab>
-               
-               
-              <tab heading="Manage Category" ui-sref = "oz.ozWall.ozManageCategoriesTab" class = "cursorPointerHyperlink" ></tab>
-
-              <tab heading="Manage Tags" ui-sref = "oz.ozWall.ozManageUserdefinedTags" class = "cursorPointerHyperlink" ></tab>
-
-              <tab heading="Manage Seller Participation" ui-sref = "oz.ozWall.ozManageSellerParticipation" class = "cursorPointerHyperlink" ></tab>
-
-              <tab heading="Product Configuration Management" ui-sref = "oz.ozWall.ozManageProductConfigurations" class = "cursorPointerHyperlink"></tab>
-
-              <tab heading = "Manage Locations" ui-sref = "oz.ozWall.ozManageLocations" class = 'cursorPointerHyperlink' > </tab>
-
-
-              <tab heading = 'Order Process Configuration' ui-sref = 'oz.ozWall.ozOrderProcessCongiguration' class = 'cursorPointerHyperlink'></tab>
-
-            <tab heading = "Policies" ng-click= "trigger()" ui-sref = "oz.ozWall.ozT&CContent" style = "float:right" class = "cursorPointerHyperlink" >
-                <tabset >
-                      <tab heading="T&C" ui-sref = "oz.ozWall.ozT&CContent" class = "cursorPointerHyperlink" select = "getTemplateContent('TC');clearTemplatecontent();" active = "active.init"></tab>
-                      <tab heading="Help" ui-sref = "oz.ozWall.ozHelp" class = "cursorPointerHyperlink" select = "getTemplateContent('HP');clearTemplatecontent()"></tab>
-                      <tab heading="About" ui-sref = "oz.ozWall.ozAbout" class = "cursorPointerHyperlink" select = "getTemplateContent('AU');clearTemplatecontent()"></tab>
-                      <tab heading="Seller Participation Agreement" ui-sref = "oz.ozWall.ozSellerParticipationAgreement" class = "cursorPointerHyperlink" select = "getTemplateContent('SA');clearTemplatecontent()"></tab>
-                      <tab heading="Privacy" ui-sref = "oz.ozWall.ozPrivacy" class = "cursorPointerHyperlink" select = "getTemplateContent('PP');clearTemplatecontent()"></tab>
-              </tabset>
-           </tab>
-           </tabset>
-          </tab>
-      </tabset>
-      <div >
-          <div ui-view></div>
-      </div>
-  </div>
-
-  <div ng-if = "showSOrderView === 1 && controlWallView === 0"> 
-    <div class = "mainOrderContainer" >
-      <div class = "highlighrOrderContainer">
-           <div class = "subOrderContainer">
-               <h4 style = "float:left;"><b>Sub-order No : </b><span ng-bind = "orderContentObject.suborder.suborderid"></span></h4> 
-               <h4 style = "float:right;"><b>Delivery Date : </b><span ng-bind = "orderContentObject.suborder.deliverydate | date : 'yyyy-MM-dd HH:mm:ss'"></span></h4>      
-            </div>
-            <div class = "subOrderContainer">
-               <h4 style = "float:left;"><b>Seller Name : </b><span ng-bind = "orderContentObject.suborder.productprovider.providername"></span></h4> 
-               <h4 style = "float:right;"><b>Branch Name  : </b><span ng-bind = "orderContentObject.suborder.productprovider.branchname"></span></h4>      
-            </div>
-            <div class = "subOrderContainer">
-               <h4 style = "float:left;"><b>Customer Contact No. : </b><span ng-bind = "orderContentObject.consumer.mobileno"></span></h4> 
-               <h4 style = "float:right;"><b>Seller Contact No.  : </b><span >Data not available</span></h4>      
-            </div>
-            <div class = "fontsize"><u><b>Status : </b><span ng-bind = "orderContentObject.suborder.status"></span></u></div>
-        <div class = 'row' style = 'border : 1px solid #ccc; ' >
-                 <div  class="col-md-3">  <h4> Product Name </h4></div>
-                 <div  class="col-md-3" >  <h4> Quantity </h4></div>
-                 <div  class="col-md-3" style = 'text-align : right'>  <h4> Price per unit &nbsp;{{orderContentObject.suborder.products[0].currency}}</h4></div>
-                  <div  class="col-md-3" style = 'text-align : right'>  <h4> Total &nbsp;{{orderContentObject.suborder.products[0].currency}}</h4></div>
-        </div>
-        <div class = 'row' style = 'border-bottom : 1px solid #ccc; border-bottom : 0px'>
-         <div class="row rowSideMargin" ng-repeat="product in orderContentObject.suborder.products" style = 'border-bottom : 1px solid #ccc'> 
-              <div  class="col-md-4">  
-                 <span class=" fontsize" > 
-                       <span style="">
-                       <a href="" ng-init="productMassage = false" ng-click="productMassage = productMassage === false ? true: false;" ng-show="product.productconfiguration.length>0">
-                            <span class="fa fa-cog fa-lg" style="padding-right:5px"> </span>
-                       </a>
-
-                      <a  ng-show="product.productconfiguration.length<=0">
-                            <span class="fa fa-cog fa-lg" style="padding-right:5px; color : #FFFFFF"> </span>
-                       </a>
-                      </span>
-                  {{product.productname}} 
-                  <div class="OZ-cakeMessage" ng-show="productMassage==1">
-                      <table style="margin:2px ;background-color:rgb(246, 241, 246)" class="borderless table table-condensed ">
-                        <tr>
-                          <td class="width25 fontsize"><span class=" bold">Name </span></td>
-                          <td class="width50 fontsize"><span class=" bold">Value </span></td>
-                          <td class="width25 fontsize"><span class=" bold">Price </span></td>
-                        </tr>
-                        </table>
-                      <table style="margin:2px; " class="borderless table table-condensed fontsize" ng-repeat="config in product.productconfiguration">
-                        <tr ng-show="config.prod_configtype =='msg'">
-                          <td class="width25"><span class=" "> Message </span></td>
-                          <td class="width50"><span class=" breakword"> {{config.data.msg}}</span></td>
-                          <td class="width25"> {{config.prod_configprice.value}} / {{config.prod_configprice.uom}}</td>
-                        </tr>
-                        <tr ng-show="config.prod_configtype =='ftp'">
-                          <td class="width25"><span class=" "> Foodtype </span></td>
-                          <td class="width50"><span class=" breakword">  {{config.data.ftp}}</span></td>
-                          <td class="width25"> {{config.prod_configprice.value}} / {{config.prod_configprice.uom}}</td>
-                        </tr>
-                        <tr ng-show="config.prod_configtype =='ppr'">
-                          <td class="width25"><span class=" "> Photo print </span></td>
-                          <td class="width50"> <img class="orderConfigImg" style="height:50px; width:50px" ng-src="{{config.data.ftp}}" alt-SRC src="../assets/images/if_no_org_images_available.jpg"  ></td>
-                          <td class="width25"> {{config.prod_configprice.value}} / {{config.prod_configprice.uom}}</td>
-                        </tr>
-                      </table>
-                   </div>
-                 </span>
-              </div>
-              <div  class="col-md-2 fontsize">
-                 <span class=" oz-contentsRight">{{product.qty}} {{product.uom}}</span>
-              </div>
-              <div  class="col-md-3 fontsize" style = 'text-align : right'>
-                 <span class=" oz-contentsRight"> {{product.orderprice/product.qty}}</span>
-              </div>
-              <div  class="col-md-3 fontsize" style = 'text-align : right'>
-                 <span class="marginLeft15 oz-contentsRight " > {{product.orderprice}}</span>
-              </div>
-         </div> 
-       </div>
-                    
-           <div class = 'row fontsize' style = 'margin-right:5px'>
-           <span style = 'float:right;'>
-               <b>Grand Total : </b>
-                      <span ng-bind = "  ' ' + orderContentObject.suborder.products[0].currency+ ' '+orderContentObject.suborder.suborder_price"></span>
-               </span>
-           </div> 
-                           
-              <br>
-       </div> 
-    </div>  
-  </div> -->
-<!--  $scope.controlWallView = 1;    
-
-     $scope.showSorderView = 0; -->
-<!-- ng-if = 'controlWallView === 1 && showSorderView === 0'  -->
 <div style = 'margin-top : 5px;' >
     <tabset>
         <tab heading = 'Orders' class = 'cursorPointerHyperlink' ng-init = 'showOrderContents()' ng-click = 'trigger();showOrderContents()'  ui-sref = "oz.ozWall.ozOrderViewContent">
@@ -203,8 +40,9 @@
          </div>
 
               <tabset style = 'margin-top : 14px;'>
-                  <tab heading = 'Orderwise' class = 'cursorPointerHyperlink' ng-click = "showOrderContents()" ui-sref = "oz.ozWall.ozOrderViewContent" active = 'active.init'></tab>
+                  <tab heading = 'Orders' class = 'cursorPointerHyperlink' ng-click = "showOrderContents()" ui-sref = "oz.ozWall.ozOrderViewContent" active = 'active.init'></tab>
                   <tab heading = 'Productwise' class = 'cursorPointerHyperlink' ng-click = "showProductContent()"  ui-sref = "oz.ozWall.ozProductContent" ></tab>
+                  <tab heading = 'Failed Orders' class = 'cursorPointerHyperlink' ng-click = "showFailedOrderContents()"  ui-sref = "oz.ozWall.ozFailedOrderViewContent" ></tab>
               </tabset>
 
         </tab>
