--- a/src/app/ProviderWall/ManagePrices/views/oz.providerContent.managePrice.tpl.html
+++ b/src/app/ProviderWall/ManagePrices/views/oz.providerContent.managePrice.tpl.html
@@ -17,7 +17,7 @@
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-default " data-dismiss="modal" ng-click="disableEditorPrice()"> <i class="glyphicon glyphicon-remove"></i>  &nbsp; Cancel</button>
-              <button type="button" class="btn btn-primary  " id="ChangeProductPriceOkButton" data-dismiss="modal" > <i class="fa fa-floppy-o"></i>  &nbsp; OK </button>
+              <button type="button" ng-click="updatePrices(productPricelist)" class="btn btn-primary  " id="ChangeProductPriceOkButton" data-dismiss="modal" > <i class="fa fa-floppy-o"></i>  &nbsp; OK </button>
 
             </div>
             
