--- a/src/app/ProviderWall/ManageDiscount/views/oz.providerContent.manageDiscount.tpl.html
+++ b/src/app/ProviderWall/ManageDiscount/views/oz.providerContent.manageDiscount.tpl.html
@@ -3,114 +3,85 @@
 
 <div id="tabs" >
     <ul id="tabPrice" class=" policyTab nav nav-pills" ng-init="assignDiscountCodes === 0" >
-  
-
       <li class="tabPolicyLi" ng-class="{active3 : assignDiscountCodes === 0}"  style = 'width:20%;'>
         <a id="prodoCommentSearchTab" class="prodo-cursor" ng-click="switchToManageDiscountCodes()" >
            Manage Discount Codes
          </a>
       </li>
-
       <li class="tabPolicyLi" ng-class="{active3 : assignDiscountCodes === 1}" style = 'width:20%;'>
         <a  class="prodo-cursor" id="prodoCommentTab" ng-click=" switchToAssignDiscountCodes()">
             Assign Discount Codes
         </a>
       </li>
-
-  <!--      <li class="tabPolicyLi" ng-class="{active3 : tabForOrders.delivery == 1}"  >
-        <a id="prodoCommentSearchTab" class="prodo-cursor" ng-click="tabForOrders.approval = false;
-      tabForOrders.processing = false; tabForOrders.delivery = true;" >
-         Order Delivery
-         </a>
-      </li> -->
     </ul>
 </div>
 
+<div style = 'margin:0px;padding:20px;' ng-if = 'assignDiscountCodes === 1 && manageDiscountCodes === 0' >
+  <div class = 'row' style = 'margin : 5px;'>
+    <div class = 'row'>
+        <div style= 'border: 1px solid #ccc; border-radius:4px;' class="col-md-12">
+           <select  class=" form-control" ng-options="list as list.discountcode for list in containerOfDiscountCode" ng-model="list.discountid"  style = 'width: 40%; float : right;margin-bottom : 10px;margin-top : 7px;'  ng-change = 'assignCodes(list.discountid)'></select>
+            <span style = 'float: right;margin-top: 12px;' > Please select discount code from the list : &nbsp;&nbsp;</span>
 
-
-
-  <div style = 'margin:0px;padding:20px;' ng-if = 'assignDiscountCodes === 1 && manageDiscountCodes === 0' >
-    <div class = 'row' style = 'margin : 5px;'>
-        <div class = 'row'>
-            <div style= 'border: 1px solid #ccc; border-radius:4px;' class="col-md-12">
-               <select  class=" form-control" ng-options="list as list.discountcode for list in containerOfDiscountCode" ng-model="list.discountid"  style = 'width: 40%; float : right;margin-bottom : 10px;margin-top : 7px;'  ng-change = 'assignCodes(list.discountid)'></select>
-                <span style = 'float: right;margin-top: 12px;' > Please select discount code from the list : &nbsp;&nbsp;</span>
-
-            </div>
-        </div>   
-        <div class = 'row'>
-                <table class = 'table' ng-if = 'currentSelectedDiscount.length !== 0' style = 'border : 1px solid #ccc; border-radius : 5px;'>
-                      <tr>
-                        <th style = 'width : 20%'> Discount Coupen Code </th>
-                        <th style = 'width : 40%'> Description </th>
-                        <th style = 'width : 10%'> Percent</th>
-                        <th style = 'width : 15%'> Start Date </th>
-                        <th style = 'width : 15%'> End Date </th>    
-                      </tr>
-                      <tr>
-                        <td ng-bind = 'currentSelectedDiscount.discountcode'></td>
-                        <td ng-bind = 'currentSelectedDiscount.description' style = 'word-break: break-word;'></td>
-                        <td ng-bind = 'currentSelectedDiscount.percent'></td>
-                        <td ng-bind = 'currentSelectedDiscount.startdate | date: fullDate'></td>
-                        <td ng-bind = 'currentSelectedDiscount.expirydate | date: fullDate'></td>
-                      </tr>
-                </table>
-        </div> 
-     </div>   
-
-     <div class = 'row' style = 'margin : 5px;'>
-            <div style= 'border: 1px solid #ccc; border-radius:4px;' class="col-md-6">
-             <!--  <table class = 'table table-hover' style = 'margin-bottom : 0%;'>
-                   <tr>
-                       <td style = 'border-top:0px'>  <input type= 'text' class = 'form-control' ng-model = 'searchProduct' placeholder = 'Search products'></td>
-                   </tr>
-                    <tr>
-                       <td> <div class = 'productNameWidth cursorPointerHyperlink'  ng-click= 'addAllProductsToFinalList()' >Add All Products</div></td>
-                   </tr>
-                  <tr ng-repeat = 'list in productsList | filter : searchProduct'>
-                      <td  ng-click = 'addToFinalProductList(list, $index)' style = 'cursor : e-resize' ><span ng-bind = 'list.productname' > </span></td>
+        </div>
+    </div>   
+    <div class = 'row'>
+            <table class = 'table' ng-if = 'currentSelectedDiscount.length !== 0' style = 'border : 1px solid #ccc; border-radius : 5px;'>
+                  <tr>
+                    <th style = 'width : 20%'> Discount Coupen Code </th>
+                    <th style = 'width : 40%'> Description </th>
+                    <th style = 'width : 10%'> Percent</th>
+                    <th style = 'width : 15%'> Start Date </th>
+                    <th style = 'width : 15%'> End Date </th>    
                   </tr>
-              </table> -->
-              <div class = 'row'>
-                    <div style = 'margin : 5px' > <h5> Products without discount code applied </h5> </div>
-              </div>
-         <!--      <div class = 'row' style = 'padding : 5px;' ng-if = 'showFilterBoxes === 1'>
-                      <input type= 'text' class = 'form-control' ng-model = 'searchProduct' placeholder = 'Filter products' id = 'textBoxOne' >
-              </div> -->
-              <div class = 'row'>
-                      <div class = 'productNameWidth cursorPointerHyperlink' style="margin : 5px;" ng-click= 'addAllProductsToFinalList()' >Add All Products</div>
+                  <tr>
+                    <td ng-bind = 'currentSelectedDiscount.discountcode'></td>
+                    <td ng-bind = 'currentSelectedDiscount.description' style = 'word-break: break-word;'></td>
+                    <td ng-bind = 'currentSelectedDiscount.percent'></td>
+                    <td ng-bind = 'currentSelectedDiscount.startdate | date: fullDate'></td>
+                    <td ng-bind = 'currentSelectedDiscount.expirydate | date: fullDate'></td>
+                  </tr>
+            </table>
+    </div> 
+</div>   
 
-              </div>      
-              <hr style = 'margin-bottom : 5px; margin-top : 5px;'>  
-
-              <div class = 'row' ng-if = 'productsList.length !== 0'>
-                  <div class = 'col-md-6 col xs-6' style = 'padding-left: 5px;'><h5>Product Name</h5></div>
-                  <div class = 'col-md-6 col xs-6'><h5>Product Price</div>
-              </div>
-
-              <div class = 'row'>
-                  <div ng-repeat = 'list in productsList | filter : searchProduct'>
-                      <div class = 'row' style = 'cursor : e-resize; ' ng-click = 'addToFinalProductList(list, $index)' data-container="body" data-toggle="popover " data-placement="left" data-content = "Click on the product to move it into next list">
-                          <div class = 'col-xs-6 col-ms-6'>
-                              <span  style = 'margin-left : 5px;margin-right : 5px;' ng-bind = 'list.productname'></span>
-                          </div>
-                          <div class = 'col-xs-6 col-ms-6'>
-                              <span ng-bind = 'list.price.value + " " + list.price.currency'></span>
-                          </div>
-                      </div>    
-                      <hr style = 'margin-bottom : 5px; margin-top : 5px;'>
-                  </div>    
-              </div>
-            </div>
-
+<div class = 'row' style = 'margin : 5px;'>
+   <div style= 'border: 1px solid #ccc; border-radius:4px;' class="col-md-6">
+      <div class = 'row'>
+            <div style = 'margin : 5px' > <h5> Products without discount code applied </h5> </div>
+      </div>
+      <div class = 'row' style = 'padding : 5px;'>
+              <input type= 'text' class = 'form-control' ng-model = 'filter.searchProducts' placeholder = 'Filter products' id = 'textBoxTwo' >
+      </div>
+      <div class = 'row'>
+              <div class = 'productNameWidth cursorPointerHyperlink' style="margin : 5px;" ng-click= 'addAllProductsToFinalList()' >Add All Products</div>
+      </div>      
+      <hr style = 'margin-bottom : 5px; margin-top : 5px;'>  
+      <div class = 'row' ng-if = 'productsList.length !== 0'>
+          <div class = 'col-md-6 col xs-6' style = 'padding-left: 5px;'><h5>Product Name</h5></div>
+          <div class = 'col-md-6 col xs-6'><h5>Product Price</div>
+      </div>
+      <div class = 'row'>
+          <div ng-repeat = 'list in productsList | filter : filter.searchProducts'>
+              <div class = 'row' style = 'cursor : e-resize; ' ng-click = 'addToFinalProductList(list, $index)' data-container="body" data-toggle="popover " data-placement="left" data-content = "Click on the product to move it into next list">
+                  <div class = 'col-xs-6 col-ms-6'>
+                      <span  style = 'margin-left : 5px;margin-right : 5px;' ng-bind = 'list.productname'></span>
+                  </div>
+                  <div class = 'col-xs-6 col-ms-6'>
+                      <span ng-bind = 'list.price.value + " " + list.price.currency'></span>
+                  </div>
+              </div>    
+              <hr style = 'margin-bottom : 5px; margin-top : 5px;'>
+          </div>    
+      </div>
+    </div>
             <div style= 'border: 1px solid #ccc;cursor : border-radius:4px; ' class="col-md-6 " >
-
               <div class = 'row'>
                     <div style = 'margin : 5px' > <h5> Products with discount code applied </h5> </div>
               </div>
-         <!--      <div class = 'row' style = 'padding : 5px;' ng-if = 'showFilterBoxes === 1'>
-                      <input type= 'text' class = 'form-control' ng-model = 'filterCodesWithExistingDiscounts' placeholder = 'Filter products' id = 'textBoxTwo' >
-              </div> -->
+              <div class = 'row' style = 'padding : 5px;'>
+                      <input type= 'text' class = 'form-control' ng-model = 'filter.filterCodesWithExistingDiscounts' placeholder = 'Filter products' id = 'textBoxTwo' >
+              </div>
               <div class = 'row'>
                       <div class = 'productNameWidth cursorPointerHyperlink' style="margin : 5px;" ng-click= 'clearAllProductsToFinalList()' >Remove All Products</div>
                 
@@ -122,7 +93,7 @@
                       <div class = 'col-md-4 col-xs-4'><h5>Discounted Price </h5></div>
               </div>
               <div class = 'row'>
-                  <div ng-repeat = 'list in finalSelectedProducts | filter : filterCodesWithExistingDiscounts'>
+                  <div ng-repeat = 'list in finalSelectedProducts | filter : filter.filterCodesWithExistingDiscounts'>
                       <div class = 'row' style = 'cursor : w-resize; ' ng-click = 'insertProductToProductList(list,$index)' data-toggle="tooltip" data-placement="right" title="Click on the product to move it to previous list">
                           <div class = 'col-xs-5 col-ms-5'>
                               <span  style = 'margin-left : 5px;margin-right : 5px;' ng-bind = 'list.productname'></span>
