--- a/src/app/ProviderWall/ManageDiscount/views/oz.providerContent.manageDiscount.tpl.html
+++ b/src/app/ProviderWall/ManageDiscount/views/oz.providerContent.manageDiscount.tpl.html
@@ -48,7 +48,7 @@
 <div class = 'row' style = 'margin : 5px;'>
    <div style= 'border: 1px solid #ccc; border-radius:4px;' class="col-md-6">
       <div class = 'row'>
-            <div style = 'margin : 5px' > <h5> Products without discount code applied </h5> </div>
+            <div style = 'margin : 5px' > <h5> List of all products </h5> </div>
       </div>
       <div class = 'row' style = 'padding : 5px;'>
               <input type= 'text' class = 'form-control' ng-model = 'filter.searchProducts' placeholder = 'Filter products' id = 'textBoxTwo' >
