--- a/src/app/ProviderWall/ManageDeliveryCharges/views/oz.deliverycharges.managearea.tpl.html
+++ b/src/app/ProviderWall/ManageDeliveryCharges/views/oz.deliverycharges.managearea.tpl.html
@@ -20,7 +20,7 @@
 
 			<div id="oz-signup-input-group" class="input-group">
 				<p class="text-muted">Please Select State</p>
-	 			<input name="state" class="form-control" type="text" placeholder="state" required ng-model="state" typeahead="state for state in states | filter:$viewValue | limitTo:6" typeahead-on-select="getCityForState(state)" />
+	 			<input id="state" name="state" class="form-control" type="text" placeholder="state" required ng-model="state" typeahead="state for state in states | filter:$viewValue | limitTo:6" typeahead-on-select="getCityForState(state)" />
 			</div>
 
 		</div>	
@@ -29,7 +29,7 @@
 
 			<div id="oz-signup-input-group" class="input-group">
 				<p class="text-muted">Please Select City</p>
-	 			<input name="city" class="form-control" type="text" placeholder="city" required ng-model="city" typeahead="city for city in cities | filter:$viewValue | limitTo:6" typeahead-on-select="getZipcodeForCity(city)" />
+	 			<input id="city" name="city" class="form-control" type="text" placeholder="city" required ng-model="city" typeahead="city for city in cities | filter:$viewValue | limitTo:6" typeahead-on-select="getZipcodeForCity(city)" />
 			</div>
 
 		</div>
