manage delivery charges typeahead onselect function changed to ngblur

--- a/src/app/ProviderWall/ManageDeliveryCharges/views/oz.deliverycharges.display.tpl.html
+++ b/src/app/ProviderWall/ManageDeliveryCharges/views/oz.deliverycharges.display.tpl.html
@@ -4,9 +4,10 @@
 			<table class="table table-striped table-condensed">
 				<thead>
 					<tr style="letter-spacing:1px; font-size:13px; font-weight:bold; text-transform:uppercase;">
-						<td width="15%">Serial #</td>
-						<td width="20%">Zipcode</td>
-						<td width="20%">Area</td>
+						<td width="10%">Serial #</td>
+						<td width="15%">City</td>
+						<td width="15%">Zipcode</td>
+						<td width="15%">Area</td>
 						<td width="25%">Availability</td>
 						<td width="20%">Delivery Charge(<i class="fa fa-inr"></i>)</td>
 					</tr>
@@ -14,6 +15,7 @@
 				<tbody>
 					<tr style="letter-spacing:1px; font-size:12px; text-transform:uppercase;" ng-repeat="area in AllBranchAreaList">
 						<td>{{$index + 1}}</td>
+						<td>{{area.coverage.city}}</td>
 						<td>{{area.coverage.zipcode}}</td>
 						<td>{{area.coverage.area}}</td>
 						<td><p style="font-size:12px;"><span class="label label-success"><i class="fa fa-check"></i>&nbsp;&nbsp;Available</span></p></td>
