--- a/src/app/ProviderWall/ManageDeliveryCharges/views/oz.deliverycharges.managearea.tpl.html
+++ b/src/app/ProviderWall/ManageDeliveryCharges/views/oz.deliverycharges.managearea.tpl.html
@@ -11,7 +11,7 @@
 
 			<div id="oz-signup-input-group" class="input-group">
 				<p class="text-muted">Please Select Country</p>
-	 			<input name="country" class="form-control" type="text" placeholder="country" required ng-model="country" typeahead="country for country in countries | filter:$viewValue | limitTo:6" typeahead-on-select="" />
+	 			<input name="country" class="form-control" type="text" placeholder="country" required ng-model="country" typeahead="country for country in countries | filter:$viewValue | limitTo:6" ng-blur="" />
 			</div>
 
 		</div>		
@@ -20,7 +20,7 @@
 
 			<div id="oz-signup-input-group" class="input-group">
 				<p class="text-muted">Please Select State</p>
-	 			<input id="state" name="state" class="form-control" type="text" placeholder="state" required ng-model="state" typeahead="state for state in states | filter:$viewValue | limitTo:6" typeahead-on-select="getCityForState(state)" />
+	 			<input id="state" name="state" class="form-control" type="text" placeholder="state" required ng-model="state" typeahead="state for state in states | filter:$viewValue | limitTo:6" ng-blur="getCityForState(state)" />
 			</div>
 
 		</div>	
@@ -29,7 +29,7 @@
 
 			<div id="oz-signup-input-group" class="input-group">
 				<p class="text-muted">Please Select City</p>
-	 			<input id="city" name="city" class="form-control" type="text" placeholder="city" required ng-model="city" typeahead="city for city in cities | filter:$viewValue | limitTo:6" typeahead-on-select="getZipcodeForCity(city)" />
+	 			<input id="city" name="city" class="form-control" type="text" placeholder="city" required ng-model="city" typeahead="city for city in cities | filter:$viewValue | limitTo:6" ng-blur="getZipcodeForCity(city)" />
 			</div>
 
 		</div>
@@ -38,7 +38,7 @@
 
 			<div id="oz-signup-input-group" class="input-group">
 				<p class="text-muted">Please Select Zipcode*</p>
-	 			<input id="zipcode" name="zipcode" class="form-control" type="text" placeholder="zipcode" required ng-model="zipcode" typeahead="zipcode for zipcode in zipcodes | filter:$viewValue | limitTo:6" typeahead-on-select="getAreaForZipcode(zipcode)" />
+	 			<input id="zipcode" name="zipcode" class="form-control" type="text" placeholder="zipcode" required ng-model="zipcode" typeahead="zipcode for zipcode in zipcodes | filter:$viewValue | limitTo:6" ng-blur="getAreaForZipcode(zipcode)" />
 			</div>			
 
 		</div>
@@ -49,7 +49,7 @@
 
 			<div id="oz-signup-input-group" class="input-group">
 				<p class="text-muted">Please Select Area*</p>
-	 			<input id="area" name="area" class="form-control" type="text" placeholder="area" required ng-model="locationarea.area" typeahead="locationarea as locationarea.area for locationarea in locationareas | filter:$viewValue | limitTo:6" typeahead-on-select="getAvailabilityForArea(locationarea.area)" />
+	 			<input id="area" name="area" class="form-control" type="text" placeholder="area" required ng-model="locationarea.area" typeahead="locationarea as locationarea.area for locationarea in locationareas | filter:$viewValue | limitTo:6" ng-blur="getAvailabilityForArea(locationarea.area)" />
 			</div>			
 
 		</div>	
@@ -68,9 +68,10 @@
 				<table class="table table-striped table-condensed">
 					<thead>
 						<tr style="letter-spacing:1px; font-size:13px; font-weight:bold; text-transform:uppercase;">
-							<td width="15%">Serial #</td>
-							<td width="20%">Zipcode</td>
-							<td width="20%">Area</td>
+							<td width="10%">Serial #</td>
+							<td width="15%">City</td>
+							<td width="15%">Zipcode</td>
+							<td width="15%">Area</td>
 							<td width="25%">Availability</td>
 							<td width="20%">Delivery Charge(<i class="fa fa-inr"></i>)</td>
 						</tr>
@@ -78,6 +79,7 @@
 					<tbody>
 						<tr style="letter-spacing:1px; font-size:12px; text-transform:uppercase;" ng-repeat="available in add_availability">
 							<td>{{$index + 1}}</td>
+							<td>{{available.coverage.city}}</td>
 							<td>{{available.coverage.zipcode}}</td>
 							<td>{{available.coverage.area}}</td>
 							<td><input type="checkbox" ng-model="available.available"></td>
@@ -106,9 +108,10 @@
 			<table class="table table-striped table-condensed">
 				<thead>
 					<tr style="letter-spacing:1px; font-size:13px; font-weight:bold; text-transform:uppercase;">
-						<td width="15%">Serial #</td>
-						<td width="20%">Zipcode</td>
-						<td width="20%">Area</td>
+						<td width="10%">Serial #</td>
+						<td width="15%">City</td>
+						<td width="15%">Zipcode</td>
+						<td width="15%">Area</td>
 						<td width="25%">Availability</td>
 						<td width="20%">Delivery Charge(<i class="fa fa-inr"></i>)</td>
 					</tr>
@@ -116,6 +119,7 @@
 				<tbody>
 					<tr style="letter-spacing:1px; font-size:12px; text-transform:uppercase;" ng-repeat="area in delivery_available">
 						<td>{{$index + 1}}</td>
+						<td>{{area.coverage.city}}</td>
 						<td>{{area.coverage.zipcode}}</td>
 						<td>{{area.coverage.area}}</td>
 						<td ng-show="area.available"><p style="font-size:12px; color:green;margin-left: 40px;"><i class="fa fa-check"></i></p></td>
@@ -145,9 +149,10 @@
 				<table class="table table-striped table-condensed">
 					<thead>
 						<tr style="letter-spacing:1px; font-size:13px; font-weight:bold; text-transform:uppercase;">
-							<td width="15%">Serial #</td>
-							<td width="20%">Zipcode</td>
-							<td width="20%">Area</td>
+							<td width="10%">Serial #</td>
+							<td width="15%">City</td>
+							<td width="15%">Zipcode</td>
+							<td width="15%">Area</td>
 							<td width="25%">Availability</td>
 							<td width="20%">Delivery Charge(<i class="fa fa-inr"></i>)</td>
 						</tr>
@@ -155,6 +160,7 @@
 					<tbody>
 						<tr style="letter-spacing:1px; font-size:12px; text-transform:uppercase;" ng-repeat="area in edit_delivery_available">
 							<td>{{$index + 1}}</td>
+							<td>{{area.coverage.city}}</td>
 							<td>{{area.coverage.zipcode}}</td>
 							<td>{{area.coverage.area}}</td>
 							<td><input type="checkbox" ng-model="area.available"></td>
