delivery charges typeahead issue resolved

--- a/src/app/ProviderWall/ManageDeliveryCharges/views/oz.deliverycharges.manage.tpl.html
+++ b/src/app/ProviderWall/ManageDeliveryCharges/views/oz.deliverycharges.manage.tpl.html
@@ -4,7 +4,7 @@
 			<div id="tabs" >
 				<ul id="tabPrice" class=" policyTab nav nav-pills nav-justified">
 				  <li ng-class="active3" class="tabPolicyLi active"><a showtab="" href="" ui-sref="managedeliverycharges.view.display" ng-click="viewAvailableAreaList()">View Area Coverage</a></li>
-				  <li ng-class="active3" class="tabPolicyLi"><a showtab="" href="" ui-sref="managedeliverycharges.view.manage">Manage Area Coverage</a></li>
+				  <li ng-class="active3" class="tabPolicyLi"><a showtab="" href="" ui-sref="managedeliverycharges.view.manage" ng-click="manageDeliveryAreaAvailability()">Manage Area Coverage</a></li>
 				</ul>
 			</div>
 		</div>
