--- a/src/app/ProviderWall/ManagePrices/views/oz.providerContent.managePrice.tpl.html
+++ b/src/app/ProviderWall/ManagePrices/views/oz.providerContent.managePrice.tpl.html
@@ -118,7 +118,7 @@
     		</td>
     	</tr>
 
-    	<tr ng-repeat="product in productPricelist | filter : searchPro1"> 
+    	<tr ng-repeat="product in productPricelist | filter : searchPro1 |  orderBy:'productname'"> 
     	   <td class="ozWidth20">
     		 <span >{{product.productname}} [ {{product.productcode}} ]</span>
     		</td>
@@ -167,7 +167,7 @@
         </td>
 
       </tr>
-      <tr ng-repeat = 'list in products | filter : searchPro'>
+      <tr ng-repeat = "list in products | filter : searchPro | orderBy:'productname' ">
         <td ng-bind = 'list.productname'></td>
         <td >
           {{list.price.currency}} {{list.price.value}} / {{list.price.uom}}
