some changes done in admin

--- a/src/app/OrderZapp/oz/views/oz.oz_content.tpl.html
+++ b/src/app/OrderZapp/oz/views/oz.oz_content.tpl.html
@@ -1,6 +1,6 @@
 <div style = 'margin-top : 5px;' >
     <tabset>
-        <tab heading = 'Orders' class = 'cursorPointerHyperlink' ng-init = 'showOrderContents()' ng-click = 'trigger();showOrderContents()'  ui-sref = "oz.ozWall.ozOrderViewContent">
+        <tab heading = 'Orders' class = 'cursorPointerHyperlink' ng-init = 'showOrderContents()' ng-click = 'trigger();showOrderContents()'  ui-sref = "oz.ozWall.ozOrderViewContent" active = 'active.init'>
 <!--           <div>
                <div ng-repeat="branches in branchContent" ui-sref = "oz.ozWall.ozOrderViewContent" ng-click= "showOrderContent(branches.branchid);trigger()" ng-if = 'branchContent.length>0' style = 'border: 1px solid #ccc; width : 110px; margin : 5px ; float : left; cursor : pointer'> 
                          <div ng-bind = 'branches.branchname'></div>
@@ -36,7 +36,7 @@
 
 
           <div style = 'min-height : 23px'  ng-if = 'branchContent.length>0'></div>
-         <div ng-if = "showSpinnerLogo === 1" style = "margin : 2%"> <h4>Loading</h4>&nbsp;<img src = '../assets/images/spinner.gif' style = "width: 14%;height: 20px;">
+                <div ng-if = "showSpinnerLogo === 1" style = "margin : 2%"> <h4>Loading</h4>&nbsp;<img src = '../assets/images/spinner.gif' style = "width: 14%;height: 20px;">
          </div>
 
               <tabset style = 'margin-top : 14px;'>
